Atualizar o timeline.html
atualização das imagens

--- a/timeline.html
+++ b/timeline.html
@@ -108,7 +108,7 @@
         <div class="timeline-item">
             <div class="year">1985</div>
             <div class="title">Windows 1.0</div>
-            <img src="https://upload.wikimedia.org/wikipedia/en/2/20/Windows1.0.png" alt="Windows 1.0" class="logo">
+            <img src="win101logo.gif" alt="Windows 1.0" class="logo">
             <div class="description">
                 Primeira versão do sistema operacional Windows da Microsoft, introduzindo uma interface gráfica baseada em MS-DOS.
             </div>
@@ -128,7 +128,7 @@
         <div class="timeline-item">
             <div class="year">1995</div>
             <div class="title">Windows 95</div>
-            <img src="https://upload.wikimedia.org/wikipedia/en/e/e1/Windows_95_logo_with_shadow.svg" alt="Windows 95" class="logo">
+            <img src="win95.jpeg" alt="Windows 95" class="logo">
             <div class="description">
                 Revolucionou a computação pessoal com seu menu Iniciar e interface aprimorada. Vendido 7 milhões de cópias nas primeiras 5 semanas.
             </div>
@@ -138,7 +138,7 @@
         <div class="timeline-item linux">
             <div class="year">2008</div>
             <div class="title">Android</div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/37/Android_logo_2019.svg" alt="Android" class="logo">
+            <img src="android.jpeg" alt="Android" class="logo">
             <div class="description">
                 Sistema operacional móvel desenvolvido pelo Google, baseado no kernel Linux. Atualmente o SO mais usado no mundo em dispositivos móveis.
             </div>
@@ -148,7 +148,7 @@
         <div class="timeline-item">
             <div class="year">2021</div>
             <div class="title">Windows 11</div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Windows_11_Logo.svg" alt="Windows 11" class="logo">
+            <img src="Windows-11_1744197782774.jpg" alt="Windows 11" class="logo">
             <div class="description">
                 A versão mais recente do Windows, com redesenho da interface e melhor integração com dispositivos Android.
             </div>
