Update iframe source for location map

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p>E-mail: <a href="mailto:direcao@tiangua.ifce.edu.br">direcao@tiangua.ifce.edu.br</a></p>
       <p>WhatsApp: <a href="https://wa.me/558834553081">+55 88 3455-3081</a></p>
       <div class="map-responsive">
-        <iframe src="https://goo.gl/maps/WFyEGh3GDTz" width="600" height="430" style="border:0;" allowfullscreen="" loading="lazy" title="Mapa IFCE Tianguá"></iframe>
+        <iframe src="7X8Q+R4 Estádio, Tianguá - CE" width="600" height="430" style="border:0;" allowfullscreen="" loading="lazy" title="Mapa IFCE Tianguá"></iframe>
       </div>
     </section>
 
